tests/positive/LetShadow.juvix
module LetShadow;

type Nat :=
  | zero : Nat
  | suc : Nat → Nat;

type Unit := unit : Unit;

t : Nat :=
  case unit of {
    x :=
      let
        x : Nat := suc zero;
      in x
  };
